--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -9,7 +9,10 @@ order: 1
         <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator</a>
     </div>
     <div class="card-header d-flex justify-content-between">
-        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator</a>
+        <a href="pf2e-npc-generator.html" class="ml-1 mr-2">NPC Generator (Pathfinder 2e)</a>
+    </div>
+    <div class="card-header d-flex justify-content-between">
+        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (D&D 5e)</a>
     </div>
     <div class="card-header d-flex justify-content-between">
         <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
