PF2E magic item generator HTML laid out.

--- a/generators/pf2e-npc-generator.html
+++ b/generators/pf2e-npc-generator.html
@@ -281,6 +281,7 @@ title: Pathfinder 2e NPC Generator
         </div>
     </div>
 </div>
+<!-- End Options -->
 <!-- Collapsible Menu Script -->
 <script>
     var coll = document.getElementsByClassName("collapsible");
