Updated generators tab.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -3,19 +3,30 @@
 icon: fas fa-info-circle
 order: 1
 ---
+<div>
+    <h2>Items & Loot</h2>
+    <div class="card categories">
+        <div class="card-header d-flex justify-content-between">
+            <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (D&D 5e)</a>
+        </div>
+        <div class="card-header d-flex justify-content-between">
+            <a href="pf2e-magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (Pathfinder 2e)</a>
+        </div>
+    </div>
+</div>
 
-<div class="card categories">
-    <div class="card-header d-flex justify-content-between">
-        <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator</a>
-    </div>
-    <div class="card-header d-flex justify-content-between">
-        <a href="pf2e-npc-generator.html" class="ml-1 mr-2">NPC Generator (Pathfinder 2e)</a>
-    </div>
-    <div class="card-header d-flex justify-content-between">
-        <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (D&D 5e)</a>
-    </div>
-    <div class="card-header d-flex justify-content-between">
-        <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
+<div>
+    <h2>NPCs and Characters</h2>
+    <div class="card categories">
+        <div class="card-header d-flex justify-content-between">
+            <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (D&D 5e)</a>
+        </div>
+        <div class="card-header d-flex justify-content-between">
+            <a href="pf2e-npc-generator.html" class="ml-1 mr-2">NPC Generator (Pathfinder 2e)</a>
+        </div>
+        <div class="card-header d-flex justify-content-between">
+            <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
+        </div>
     </div>
 </div>
 
